--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>io.spring.javaformat</groupId>
+                <artifactId>spring-javaformat-maven-plugin</artifactId>
+                <version>0.0.28</version>
+            </plugin>
         </plugins>
     </build>
 
