--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.thymeleaf.cache=false
-spring.datasource.url=jdbc:postgresql://192.168.15.85:5432/monitor_consumo
+spring.datasource.url=jdbc:postgresql://postgres_monitorconsumo:5432/monitor_consumo
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.auto-commit=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 server.port=8080
