--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.thymeleaf.cache=false
-spring.datasource.url=jdbc:postgresql://postgres_monitorconsumo:5432/monitor_consumo
+spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
