--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>MonitorConsumo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>23.31.001</version>
     <name>MonitorConsumo</name>
     <description>MonitorConsumo</description>
     <properties>
