--- a/pom.xml
+++ b/pom.xml
@@ -81,12 +81,13 @@
             <version>1.1.3</version>
         </dependency>
     </dependencies>
-
     <build>
+        <finalName>monitor-consumo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.4</version>
                 <configuration>
                     <excludes>
                         <exclude>
