Add HTTP trace logging functionality and actuator dependency
This commit includes several updates to enhance application monitoring. A new `JsonEncoder`, `CustomHttpTraceFilter` and `HttpTraceDTO` classes have been added to provide HTTP request/responses logging functionality. The logging library has been switched from Log4j2 to SLF4j. Additionally, the Spring Boot Actuator dependency has been introduced to expose health, info and Prometheus endpoints. The spring application name is now also populated dynamically based on the project's artifactId. These updates will significantly improve trackability and diagnostics.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+management.endpoints.web.exposure.include=health,info,prometheus
+spring.application.name=@project.artifactId@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.auto-commit=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
