--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@
             <artifactId>modelmapper</artifactId>
             <version>1.1.3</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.9.6</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>monitor-consumo</finalName>
